--- a/package.json
+++ b/package.json
@@ -11,7 +11,21 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "next": "14.2.15",
+    "axios": "1.7.7",
+    "@tanstack/react-query": "5.59.13",
+    "@reduxjs/toolkit": "2.2.8",
+    "zod": "3.23.8",
+    "react-redux": "9.1.2",
+    "react-hook-form": "7.53.0",
+    "lucide-react": "0.452.0",
+    "framer-motion": "11.11.8",
+    "date-fns": "4.1.0",
+    "moment": "2.30.1",
+    "lodash": "4.17.21",
+    "react-day-picker": "9.1.3",
+    "clsx": "2.1.1",
+    "tailwind-merge": "2.5.3"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -21,6 +35,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "eslint-config-next": "14.2.15",
+    "@tailwindcss/forms": "0.5.9"
   }
 }
